[gd_scene load_steps=3 format=3 uid="uid://bxc2pu2q611e0"]

[ext_resource type="Script" uid="uid://cpt2quywkpqiu" path="res://pages/level_editor/popup_panel/popup_panel.gd" id="1_vtnw6"]
[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="2_hsurq"]

[node name="PopupPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtnw6")

[node name="BigPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SmallPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.356
anchor_top = 0.242
anchor_right = 0.674
anchor_bottom = 0.567
offset_left = 0.47998
offset_top = -0.360016
offset_right = -0.0800781
offset_bottom = -0.360046

[node name="TinyPanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.369
anchor_top = 0.319
anchor_right = 0.664
anchor_bottom = 0.457
offset_left = 0.519958
offset_top = 0.47998
offset_right = 0.119873
offset_bottom = 0.439972

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.465
anchor_top = 0.266
anchor_right = 0.583
anchor_bottom = 0.311
offset_left = -0.800049
offset_top = -0.279999
offset_right = -16.36
offset_bottom = 0.119965
theme_override_font_sizes/font_size = 30
text = "-- Notification --"
horizontal_alignment = 2

[node name="BodyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.372
anchor_top = 0.327
anchor_right = 0.659
anchor_bottom = 0.452
offset_left = 0.76001
offset_top = -0.160034
offset_right = 0.719971
offset_bottom = -0.160034
theme_override_font_sizes/font_size = 30
text = "You have saved the level!"
horizontal_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46
anchor_top = 0.468
anchor_right = 0.567
anchor_bottom = 0.533
offset_left = 0.799988
offset_top = -0.440033
offset_right = 0.359985
offset_bottom = 0.359924
theme = ExtResource("2_hsurq")
text = "Close"
